--- a/style.css
+++ b/style.css
@@ -1,12 +1,55 @@
 .hand,.score,.player,.winner{
     display: inline-block;
+    vertical-align: middle;
+    text-align:center;
+}
+.player img{
+    width:96px;
+    height:96px;
+    border:0px solid;
+    border-radius:5%;
+}
+.hand{
+    margin:10px;
+}
+.score{
+    margin-right:10px;
+    width:50px;
+    padding:20px;
+    border:8px solid;
+    border-color:brown;
+    border-radius: 20%;
+    font-size:300%;
+}
+.winner{
+    padding:20px;
+    width:150px;
+    font-size:300%;
+    text-decoration: underline;
+    border:8px solid;
+    border-color:brown;
+    border-radius:10%;
+}
+html{
+    height: 100%;
 }
 body{
-    background-color:brown;
+    background-image: url("board.jpg");
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
 }
 .super{
-    background-color: green;
+    background-color:rgba(0,200,0,.8);
+    text-align:center;
+    width:90%;
+    max-width: 1200px;
+    min-width: 950px;
+    margin-left:auto;
+    margin-right:auto;
+    border:0px;
+    border-radius:10%;
 }
 .seat{
     margin:auto 0;
+    padding:10px;
 }
